[package]
name = "rust-the-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world"
path = "src/hello_world/main.rs"

[[bin]]
name = "hello_cargo"
path = "src/hello_cargo/main.rs"

[dependencies]
