[package]
name = "rust-the-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello_world"
path = "src/hello_world/main.rs"

[[bin]]
name = "hello_cargo"
path = "src/hello_cargo/main.rs"

[[bin]]
name = "guessing_game"
path = "src/guessing_game/main.rs"

[[bin]]
name = "variables"
path = "src/variables/main.rs"

[[bin]]
name = "data_types"
path = "src/data_types/main.rs"

[[bin]]
name = "functions"
path = "src/functions/main.rs"

[[bin]]
name = "comments"
path = "src/comments/main.rs"

[[bin]]
name = "control_flow"
path = "src/control_flow/main.rs"

[[bin]]
name = "ownership"
path = "src/ownership/main.rs"

[[bin]]
name = "references_borrowing"
path = "src/references_borrowing/main.rs"

[[bin]]
name = "slices"
path = "src/slices/main.rs"

[[bin]]
name = "defining_structs"
path = "src/defining_structs/main.rs"

[[bin]]
name = "example_structs"
path = "src/example_structs/main.rs"

[[bin]]
name = "method_syntax"
path = "src/method_syntax/main.rs"

[[bin]]
name = "defining_an_enum"
path = "src/defining_an_enum/main.rs"

[[bin]]
name = "match"
path = "src/match/main.rs"

[[bin]]
name = "if_let"
path = "src/if_let/main.rs"

[[bin]]
name = "vectors"
path = "src/vectors/main.rs"

[[bin]]
name = "strings"
path = "src/strings/main.rs"

[dependencies]
rand = "0.8.4"
